Committing my first code from google colab

--- a/Gen_AI.ipynb
+++ b/Gen_AI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNP4zn8aZ5V55x0sROYyyCI",
+      "authorship_tag": "ABX9TyOsRf9PuLqP06GUe82YXn7v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Setting up python environment"
+      ],
+      "metadata": {
+        "id": "ezyxkxnFeRch"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "-MkvuU1bdpEf"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "!pip install transformers[sentencepiece] #comes with all the required dependencies"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " #make sure the package was correctly installed by importing it within your Python runtime\n",
+        " import transformers"
+      ],
+      "metadata": {
+        "id": "qrnpZIlXd3xv"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
