--- a/Project_Work.ipynb
+++ b/Project_Work.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "oRXY-EmOV4lW"
       ],
-      "authorship_tag": "ABX9TyNSWwbs1avKc29Az5vPTPrZ",
+      "authorship_tag": "ABX9TyPhrvOceB//ploLpEmGohNR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6126,7 +6126,6 @@
       ],
       "metadata": {
         "id": "vmNcsmREXS6A",
-        "outputId": "1309ba50-4fb9-4cda-e228-cfb11f39b59e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 113,
@@ -6165,7 +6164,8 @@
             "79da576805a541458a9691dee91aaab2",
             "a4457c981bac4fbb94fb794068c221c1"
           ]
-        }
+        },
+        "outputId": "1309ba50-4fb9-4cda-e228-cfb11f39b59e"
       },
       "execution_count": 6,
       "outputs": [
@@ -6341,7 +6341,6 @@
       ],
       "metadata": {
         "id": "8FG1ZM7jabBK",
-        "outputId": "31074aa0-c89a-45db-86be-982a1cb5b57a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -6358,7 +6357,8 @@
             "d3b3541e5c014f8798b2356429041549",
             "7fa6bf0f9e0f49b4b41707b458b3bb03"
           ]
-        }
+        },
+        "outputId": "31074aa0-c89a-45db-86be-982a1cb5b57a"
       },
       "execution_count": 10,
       "outputs": [
@@ -6421,7 +6421,6 @@
       ],
       "metadata": {
         "id": "4eqnNtMBaqtw",
-        "outputId": "15c6ae89-b3de-47e4-d3df-69ac85cd5e6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 113,
@@ -6460,7 +6459,8 @@
             "72525b5f0ac349be80185fd171c8a787",
             "d2af08f3cf78444bba52527466856bbd"
           ]
-        }
+        },
+        "outputId": "15c6ae89-b3de-47e4-d3df-69ac85cd5e6d"
       },
       "execution_count": 12,
       "outputs": [
@@ -6544,7 +6544,8 @@
         "    compute_metrics=compute_metrics,\n",
         ")\n",
         "\n",
-        "trainer.train()"
+        "trainer.train()\n",
+        "trainer.save_model(\"SummarizationFineTunedModel\")"
       ],
       "metadata": {
         "colab": {
@@ -6661,18 +6662,7 @@
     {
       "cell_type": "code",
       "source": [
-        " trainer.save_model(\"SummarizationFineTunedModel\")"
-      ],
-      "metadata": {
-        "id": "2StH70Z-rzoK"
-      },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "text = \"summarize: The Inflation Reduction Act lowers prescription drug costs, health care costs, and energy costs. It's the most aggressive action on tackling the climate crisis in American history, which will lift up American workers and create good-paying, union jobs across the country. It'll lower the deficit and ask the ultra-wealthy and corporations to pay their fair share. And no one making under $400,000 per year will pay a penny more in taxes.\""
+        "#text = \"summarize: The Inflation Reduction Act lowers prescription drug costs, health care costs, and energy costs. It's the most aggressive action on tackling the climate crisis in American history, which will lift up American workers and create good-paying, union jobs across the country. It'll lower the deficit and ask the ultra-wealthy and corporations to pay their fair share. And no one making under $400,000 per year will pay a penny more in taxes.\""
       ],
       "metadata": {
         "id": "iTAlIUGDpZRS"
@@ -6684,9 +6674,8 @@
       "cell_type": "code",
       "source": [
         "from transformers import pipeline\n",
-        "\n",
         "summarizer = pipeline(\"summarization\", model=\"SummarizationFineTunedModel\")\n",
-        "summarizer(text,max_length=51)\n",
+        "#summarizer(text,max_length=51)\n",
         "\n"
       ],
       "metadata": {
@@ -6722,75 +6711,6 @@
     {
       "cell_type": "code",
       "source": [
-        "summarizer(text,max_length=51)[0].get('summary_text')"
-      ],
-      "metadata": {
-        "id": "riqLtZS0ICt1",
-        "outputId": "a805685d-e630-470b-a769-4d9580919f2a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
-      },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'the Inflation Reduction Act lowers prescription drug costs, health care costs, and energy costs . it will ask the ultra-wealthy and corporations to pay their fair share . no one making under $400,000 per year will'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 37
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2A1U2bmNHNIk"
-      },
-      "execution_count": 38,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "summarizer_new(text)"
-      ],
-      "metadata": {
-        "id": "YAcY3w0GHPBG",
-        "outputId": "c27fb606-aa97-4122-9d6d-0edbfdce5432",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
-      },
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'the Inflation Reduction Act lowers prescription drug costs, health care costs, and energy costs . it will ask the ultra-wealthy and corporations to pay their fair share . no one making under $400,000 per year will'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 40
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "pip install gradio"
       ],
       "metadata": {
@@ -6809,12 +6729,12 @@
         "demo.launch()"
       ],
       "metadata": {
-        "id": "iNeccceOEI_4",
-        "outputId": "950c2e6a-a200-41fc-a784-87e208a20013",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 646
-        }
+        },
+        "id": "iNeccceOEI_4",
+        "outputId": "950c2e6a-a200-41fc-a784-87e208a20013"
       },
       "execution_count": 41,
       "outputs": [
