--- a/Project_Work.ipynb
+++ b/Project_Work.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "oRXY-EmOV4lW"
       ],
-      "authorship_tag": "ABX9TyNszoA8nsQwpX154u60DsSd",
+      "authorship_tag": "ABX9TyMXjsKUEOTt34NuhLW0Gq3r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8777,8 +8777,6 @@
         "pipe = pipeline(\"text-classification\", model=\"MauricioLopp/clasificador_ML\")"
       ],
       "metadata": {
-        "id": "Ci1NjDVEaPgg",
-        "outputId": "00503a4b-3af3-4f97-dae5-9b5813f65764",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 209,
@@ -8850,7 +8848,9 @@
             "9faa9ea1a32345039a91b03cc95d26b6",
             "9b048a518cc1441db4ea2644e0a0b33b"
           ]
-        }
+        },
+        "id": "Ci1NjDVEaPgg",
+        "outputId": "00503a4b-3af3-4f97-dae5-9b5813f65764"
       },
       "execution_count": 66,
       "outputs": [
@@ -8957,6 +8957,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**User Interface for summarization and sentiment object**"
+      ],
+      "metadata": {
+        "id": "wWX4_E35mxd9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "pip install gradio"
@@ -8972,34 +8981,21 @@
       "source": [
         "import gradio as gr\n",
         "def summarizer_new(inputFeedback):\n",
-        "    return summarizer(inputFeedback,max_length=51)[0].get('summary_text')\n",
-        "demo = gr.Interface(fn=summarizer_new, inputs=\"text\", outputs=\"text\")\n",
+        "    summary_text=summarizer(inputFeedback,max_length=51)[0].get('summary_text') #Summarization Model\n",
+        "    classification_label=clssification_Of_review(inputFeedback) #Classification Model\n",
+        "    return summary_text,classification_label\n",
+        "demo = gr.Interface(fn=summarizer_new, inputs=gr.Textbox(), outputs= [gr.Textbox(label=\"summary\", lines=3), gr.Textbox(label=\"sentiment\", lines=3)])\n",
         "demo.launch()"
       ],
       "metadata": {
-        "id": "qSG1YMaGmht7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import gradio as gr\n",
-        "def summarizer_new(inputFeedback):\n",
-        "    return clssification_Of_review(inputFeedback)\n",
-        "demo = gr.Interface(fn=summarizer_new, inputs=\"text\", outputs=\"text\")\n",
-        "demo.launch()"
-      ],
-      "metadata": {
-        "id": "6x67efMJmEOQ",
-        "outputId": "947b3ab9-af48-4b81-d1de-2c5a089c7090",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 646
-        }
+        },
+        "id": "6x67efMJmEOQ",
+        "outputId": "21a887d6-ce6a-4a38-9a89-8a9ca28dc2e2"
       },
-      "execution_count": 76,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
@@ -9008,7 +9004,7 @@
             "Setting queue=True in a Colab notebook requires sharing enabled. Setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
             "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "Running on public URL: https://b8dd21e9bfac9fd910.gradio.live\n",
+            "Running on public URL: https://4f6c31630c92de2942.gradio.live\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -9020,7 +9016,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://b8dd21e9bfac9fd910.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://4f6c31630c92de2942.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
@@ -9031,7 +9027,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 87
         }
       ]
     }
